cros: Wait for cryptohome D-bus service in AutoEnrollmentController

The code is run during early stage of the first boot, it is possible
that cryptohomed hasn't yet registered on dbus at that point. So it
should wait for the service to be available. An example of this pattern
can be found in install_attributes.cc.

Bug: 841627
Change-Id: I87125bc68bfbaec2b9468af7d22f7a4f4508f03d
Reviewed-on: https://chromium-review.googlesource.com/1072718
Commit-Queue: Wenzhao (Colin) Zang <wzang@chromium.org>
Reviewed-by: Pavol Marko <pmarko@chromium.org>
Reviewed-by: Maksim Ivanov <emaxx@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562640}
Former-commit-id: 9a374af14a9813c83f766d6d8ab2215e879bcca5